examples/test/testpolicy11520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11520
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key32: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value19
          key43: value12
      podSelector:
        matchLabels:
          key30: value16
          key5: value18
